Adaptaciones de despliegue azure

--- a/web.config
+++ b/web.config
@@ -1,18 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="PythonHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified"/>
+      <add name="httpPlatformHandler" path="*" verb="*"
+                modules="httpPlatformHandler" resourceType="Unspecified" />
     </handlers>
+
     <httpPlatform processPath="D:\home\Python27\python.exe"
-                  arguments="D:\home\site\wwwroot\manage.py runserver %HTTP_PLATFORM_PORT%"
-                  stdoutLogEnabled="true"
-                  stdoutLogFile="D:\home\LogFiles\python.log"
-                  startupTimeLimit="60"
-                  processesPerApplication="16">
+   arguments="run_waitress_server.py" requestTimeout="00:04:00" startupTimeLimit="120" startupRetryCount="3" stdoutLogEnabled="true">
       <environmentVariables>
+        <environmentVariable name="PYTHONPATH" value="D:\home\site\wwwroot" />
         <environmentVariable name="PORT" value="%HTTP_PLATFORM_PORT%" />
       </environmentVariables>
     </httpPlatform>
+    <staticContent>
+      <mimeMap fileExtension="woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension="woff2" mimeType="application/font-woff" />
+    </staticContent>
   </system.webServer>
 </configuration>
