--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 construct==2.0.6
 Django==1.8.7
+#Django==2.2
 hairball==0.3
 kurt==2.0.7
 Pillow==2.9.0
@@ -12,3 +13,5 @@ django-background-tasks==1.2.0
 waitress==1.0.1
 djangorestframework==2.4.8
 yolk==0.4.3
+django-cors-headers
+#django-cors-middleware
